--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,11 +1,11 @@
 ﻿
-  <div class="container_12">
+  <div class="container_12 c-sheet_list">
     <div class="wrapper">
 
-      <div dir-Hero-Sheet-Ctrll="heroSheet1" ng-show="sheetSelected == 'heroSheet1'"></div>
-      <div dir-Hero-Sheet-Ctrll="heroSheet2" ng-show="sheetSelected == 'heroSheet2'"></div>
-      <div dir-Hero-Sheet-Ctrll="heroSheet3" ng-show="sheetSelected == 'heroSheet3'"></div>
-      <div dir-Hero-Sheet-Ctrll="heroSheet4" ng-show="sheetSelected == 'heroSheet4'"></div>
+      <div dir-Hero-Sheet-Ctrll="heroSheet1" ng-class="{'selected' : sheetSelected == 'heroSheet1'}"></div>
+      <div dir-Hero-Sheet-Ctrll="heroSheet2" ng-class="{'selected' : sheetSelected == 'heroSheet2'}"></div>
+      <div dir-Hero-Sheet-Ctrll="heroSheet3" ng-class="{'selected' : sheetSelected == 'heroSheet3'}"></div>
+      <div dir-Hero-Sheet-Ctrll="heroSheet4" ng-class="{'selected' : sheetSelected == 'heroSheet4'}"></div>
 
     </div>
   </div>
