--- a/public/css/less/style.less
+++ b/public/css/less/style.less
@@ -20,7 +20,7 @@ JavaScript hooks:  js- js-tab-switcher
 /* styles */
 body, html{
   font-size: 16px;
-  background-color: #fff;
+  background-color: #000;
 }
 .main { width: 100%; }
 .wrapper {
@@ -171,7 +171,7 @@ h1, h2, h3, h4, h5, h6 { .reset; }
     padding: 5px 10px;
     min-height: 30px;
     vertical-align: middle;
-    font-size: 12px;
+    font-size: 14px;
     font-weight: normal;
     color: #000;
     background-color: @bg3;
