--- a/public/css/less/style.less
+++ b/public/css/less/style.less
@@ -157,7 +157,7 @@ h1, h2, h3, h4, h5, h6 { .reset; }
     color: #fff;
     font-size: 16px;
     line-height: 16px;
-    background-color: @bg1;
+    background-color: #000;
     text-align: center;
     text-transform: uppercase;
   }
@@ -345,7 +345,7 @@ h1, h2, h3, h4, h5, h6 { .reset; }
   z-index: 2;
   width: 100%;
   height: 100%;
-  background-color: #fff;
+  background-color: #000;
   -webkit-transition:all .5s ease-in-out;
   -moz-transition:all .5s ease-in-out;
   -o-transition:all .5s ease-in-out;
