--- a/public/templates/dir_hero_sheet_ctrll.html
+++ b/public/templates/dir_hero_sheet_ctrll.html
@@ -47,11 +47,13 @@
           <div class="label">{{hero.heroDataTbl.abilities}} {{hero.heroDataTbl.equipment}}</div>
       </div>
 
+<div ng-if="hero.level >= 5">
       <div class="clear"></div>
       <div class="grid_12">
           <h1 class="subtitle">Expert Skills</h1>
           <div class="label"></div>
       </div>
+</div>
       
 
       <div class="clear"></div>
