--- a/public/css/less/style.less
+++ b/public/css/less/style.less
@@ -157,7 +157,7 @@ h1, h2, h3, h4, h5, h6 { .reset; }
     color: #fff;
     font-size: 16px;
     line-height: 16px;
-    background-color: #000;
+    background-color: @bg1;
     text-align: center;
     text-transform: uppercase;
   }
