--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -12,7 +12,7 @@
 
   <div class="c-bottom_controlls">
     <button type="button" class="btn btn-warning save" ng-click="saveSheetData();">Save</button>
-    <div class="list">
+    <div class="list visible_on_mobile">
       <button type="button" class="btn btn--full btn-primary" ng-click="selectHeroSheet(1);" ng-class="{'btn-success' : sheetSelected == 'heroSheet1'}">Hero 1</button>
       <button type="button" class="btn btn--full btn-primary" ng-click="selectHeroSheet(2);" ng-class="{'btn-success' : sheetSelected == 'heroSheet2'}">Hero 2</button>
       <button type="button" class="btn btn--full btn-primary" ng-click="selectHeroSheet(3);" ng-class="{'btn-success' : sheetSelected == 'heroSheet3'}">Hero 3</button>
