--- a/public/css/less/style.less
+++ b/public/css/less/style.less
@@ -201,7 +201,7 @@ h1, h2, h3, h4, h5, h6 { .reset; }
   .item_list {
     .item {
       padding: 5px;
-      color: #fff;
+      color: #000;
       border-bottom: solid 1px @bg3;
       background-color: #a2a2a2;
       .boxsizing;
