--- a/public/css/less/style.less
+++ b/public/css/less/style.less
@@ -162,6 +162,7 @@ h1, h2, h3, h4, h5, h6 { .reset; }
     text-transform: uppercase;
   }
   .subtitle {
+    margin-top: 7px;
     font-size: 13px;
     line-height: 13px;
     background-color: @bg2;
