--- a/public/css/less/style.less
+++ b/public/css/less/style.less
@@ -244,8 +244,10 @@ h1, h2, h3, h4, h5, h6 { .reset; }
 
   .flex_list {
     width: 100%;
+    margin-top: 7px;
     .flex;
     .flex-wrap;
+    .subtitle { margin-top: 0px;}
     div[class*='grid'] { float: none; }
   }
   .flex_list--equiped {
