--- a/public/css/less/style.less
+++ b/public/css/less/style.less
@@ -214,7 +214,7 @@ h1, h2, h3, h4, h5, h6 { .reset; }
       float: right;
       .form-control {
         display: inline-block;
-        width: 30px;
+        width: 43px;
         padding: 0;
         text-align: center;
       }
@@ -251,6 +251,7 @@ h1, h2, h3, h4, h5, h6 { .reset; }
     div[class*='grid'] { float: none; }
   }
   .flex_list--equiped {
+    .label{ background-color: #616161; }
     div[class*='grid'] { background-color: @bg3; }
   }
 }
