--- a/public/templates/dir_hero_sheet_ctrll.html
+++ b/public/templates/dir_hero_sheet_ctrll.html
@@ -123,7 +123,7 @@
               <option value="{{emptyVal}}">Selecione</option>
               <option value="{{$index}}" ng-repeat="item in dataWeapons">{{item.name}} {{item.value}}G</option>
             </select>
-          <button type="button" class="btn btn--full btn-primary">Add Weapon</button>
+          <button type="button" class="btn btn--full btn-dark">Add Weapon</button>
       </div>
 
 
@@ -142,7 +142,7 @@
                 <option value="{{emptyVal}}">Selecione</option>
                 <option value="{{$index}}" ng-repeat="item in dataArmor">{{item.name}} {{item.value}}G</option>
               </select>
-          <button type="button" class="btn btn--full btn-primary">Add Armor</button>
+          <button type="button" class="btn btn--full btn-dark">Add Armor</button>
       </div>
 
 
@@ -166,7 +166,7 @@
               <option value="{{emptyVal}}">Selecione</option>
               <option value="{{$index}}" ng-repeat="item in dataItems">{{item.name}} {{item.value}}G</option>
             </select>
-          <button type="button" class="btn btn--full btn-primary">Add Items</button>
+          <button type="button" class="btn btn--full btn-dark">Add Items</button>
       </div>
 
 
@@ -190,7 +190,7 @@
               <option value="{{emptyVal}}">Selecione</option>
               <option value="{{$index}}" ng-repeat="item in dataSpells">{{item.name}}</option>
             </select>
-          <button type="button" class="btn btn--full btn-primary">Add Spells</button>
+          <button type="button" class="btn btn--full btn-dark">Add Spells</button>
       </div>
 
 
