--- a/public/css/less/style.less
+++ b/public/css/less/style.less
@@ -165,7 +165,7 @@ h1, h2, h3, h4, h5, h6 { .reset; }
     margin-top: 7px;
     font-size: 13px;
     line-height: 13px;
-    background-color: @bg2;
+    background-color: #380202;
   }
   .label {
     position: relative;
