--- a/public/css/less/style.less
+++ b/public/css/less/style.less
@@ -331,6 +331,49 @@ h1, h2, h3, h4, h5, h6 { .reset; }
   display: block;
 }
 
+.c-layer {
+  position: fixed;
+  z-index: 99999;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  
+  .bg {
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.7);
+  }
+  .content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 2;
+    padding: 20px;
+    color: #fff;
+    text-align: center;
+    background-color: #838383;
+    ._transform(-50%, -50%, 0);
+  }
+  .roll_result {
+    font-weight: bold;
+    font-size: 44px;
+    line-height: 44px;
+    text-align: center;
+  }
+  .wound_title {
+    margin-top: 15px;
+    margin-bottom: 10px;
+    font-size: 12px;
+    text-transform: uppercase;
+  }
+  .btn {
+    width: 38px;
+  }
+}
+
 @import "_editor.less";
 
 /* helpers */
