--- a/public/css/less/style.less
+++ b/public/css/less/style.less
@@ -232,7 +232,7 @@ h1, h2, h3, h4, h5, h6 { .reset; }
   .item_list--items {
     .name {
       position: relative;
-      top: 10px;
+      top: 5px;
     }
   }
   .equiped_item_img {
@@ -339,6 +339,7 @@ h1, h2, h3, h4, h5, h6 { .reset; }
   top: 0px;
   left: 0px;
   
+  .item_img { margin-bottom: 10px; }
   .bg {
     position: absolute;
     z-index: 1;
