--- a/public/templates/dir_item_info.html
+++ b/public/templates/dir_item_info.html
@@ -3,7 +3,7 @@
     <div class="content">
       <div class="item_img"><img src="{{item.image}}" /></div>
       <div class="info">
-        {{item.name}}<br />
+        <b>{{item.name}}</b><br />
         {{item.effect}} - {{item.value}}G
       </div>
     </div>
