--- a/public/templates/party.html
+++ b/public/templates/party.html
@@ -20,7 +20,7 @@
         <button type="button" class="btn btn-secondary" ng-click="rollDice(6);">Roll d6</button>
         <button type="button" class="btn btn-secondary" ng-click="rollDice(8);">Roll d8</button>
     </div>
-    <div class="list visible_on_mobile">
+    <div class="list visible_on_desktop">
       <button type="button" class="btn btn--full btn-primary" ng-click="selectHeroSheet(1);" ng-class="{'btn-success' : sheetSelected == 'heroSheet1'}">Hero 1</button>
       <button type="button" class="btn btn--full btn-primary" ng-click="selectHeroSheet(2);" ng-class="{'btn-success' : sheetSelected == 'heroSheet2'}">Hero 2</button>
       <button type="button" class="btn btn--full btn-primary" ng-click="selectHeroSheet(3);" ng-class="{'btn-success' : sheetSelected == 'heroSheet3'}">Hero 3</button>
