--- a/public/templates/dir_layer_roll.html
+++ b/public/templates/dir_layer_roll.html
@@ -3,7 +3,7 @@
     <div class="content">
       <div class="roll_result">{{roll}}</div>
       <div class="info">
-        <b>{{hero.class}}</b><br />
+        <b>{{hero.class}}</b> lvl {{hero.level}}<br />
         {{hero.atkStr}}<br />
         {{hero.defStr}}
       </div>
