--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -48,7 +48,7 @@
             <button type="button" class="btn btn-secondary btn--full" ng-click="showNewGameModal();">Create New Party</button>
         </div>
 
-        <div class="mt_20">
+        <div class="text mt_20">
           This module is in developmen, ui will change with future versions.<br>
           Beta version 0.0.1
         </div>
