--- a/public/templates/party.html
+++ b/public/templates/party.html
@@ -7,6 +7,7 @@
       <div dir-Hero-Sheet-Ctrll="heroSheet3" ng-class="{'selected' : sheetSelected == 'heroSheet3'}"></div>
       <div dir-Hero-Sheet-Ctrll="heroSheet4" ng-class="{'selected' : sheetSelected == 'heroSheet4'}"></div>
 
+      <div class="clear"></div>
       <div class="mt_20">
         <a ui-sref="home()"><button type="button" class="btn btn-warning btn--full">MAIN MENU</button></a>
       </div>
