--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -31,7 +31,8 @@
       
       <div class="grid_12 c-games">
 
-        <div class="book_image"><img src="/images/home_img1.jpg" alt="" /></div>
+        <div class="book_image"><a href="https://gumroad.com/ganeshagames?fbclid=IwAR3YnhpDU0GOi4C7OgaB3El-Cm6P1qbwQdBBIGdTSGcVavm6R_EoMsucO64" target="_blank">
+            <img src="/images/home_img1.jpg" alt="" /></a></div>
 
         <div class="text">
           Choose one of your previous saved parties, if you dont have any party created yet, just create a new one and start playing.
