--- a/public/templates/dir_hero_sheet_ctrll.html
+++ b/public/templates/dir_hero_sheet_ctrll.html
@@ -86,7 +86,7 @@
             </div>
         </div>
         <div class="grid_4">
-            <h1 class="subtitle">Eqp Armor</h1>
+            <h1 class="subtitle">Eqp Armor 1</h1>
             <div class="label">
                 <div class="equiped_item_img" ng-if="hero.armorSlot1 && hero.armorSlot1 != emptyVal"><img src="{{hero.armor[hero.armorSlot1].image}}" alt="" /></div>
                 <select class="form-control" ng-model="hero.armorSlot1">
@@ -96,7 +96,7 @@
             </div>
         </div>
         <div class="grid_4">
-            <h1 class="subtitle">Eqp Shield</h1>
+            <h1 class="subtitle">Eqp Armor 2</h1>
             <div class="label">
                 <div class="equiped_item_img" ng-if="hero.armorSlot2 && hero.armorSlot2 != emptyVal"><img src="{{hero.armor[hero.armorSlot2].image}}" alt="" /></div>
                 <select class="form-control" ng-model="hero.armorSlot2">
