--- a/public/templates/parse_link.html
+++ b/public/templates/parse_link.html
@@ -48,7 +48,7 @@
         <div class="mt_20">
             <button type="button" class="btn btn-secondary btn--full" ng-click="showNewGameModal();">Create New Party</button>
 
-            <!-- <button type="button" class="btn btn-secondary btn-sm mt_20" ng-click="getLinkToData();">Get link to party data</button> -->
+            <button type="button" class="btn btn-secondary btn-sm mt_20" ng-click="getLinkToData();">Get link to party data</button>
         </div>
 
         <div class="text mt_20">
