--- a/public/css/less/style.less
+++ b/public/css/less/style.less
@@ -223,6 +223,10 @@ h1, h2, h3, h4, h5, h6 { .reset; }
     }
     .ctrl {
       float: right;
+      .btn-group {
+        display: inline-block;
+        .btn { width: 26px; }
+      }
       .form-control {
         display: inline-block;
         width: 43px;
