--- a/public/css/less/style.less
+++ b/public/css/less/style.less
@@ -220,7 +220,8 @@ h1, h2, h3, h4, h5, h6 { .reset; }
     }
     .name {
       float: left;
-      width: ~"calc(100% - 190px);";
+      padding-bottom: 5px;
+      width: ~"calc(100% - 205px);";
     }
     .ctrl {
       float: right;
