--- a/public/templates/dir_hero_sheet_ctrll.html
+++ b/public/templates/dir_hero_sheet_ctrll.html
@@ -58,7 +58,7 @@
         </div>
         <select class="hidden_field" id="itemSelectCBO" ng-model="skillToAdd" ng-change="addItem('expertSkills', skillToAdd);">
             <option value="{{emptyVal}}">Selecione</option>
-            <option value="{{$index}}" ng-repeat="item in dataExpertSkills">{{item.name}} - {{item.value}}G</option>
+            <option value="{{$index}}" ng-repeat="item in dataExpertSkills">{{item.name}}</option>
           </select>
         <button type="button" class="btn btn--full btn-dark">Add Skill</button>
     </div>
