--- a/public/css/less/style.less
+++ b/public/css/less/style.less
@@ -171,6 +171,9 @@ h1, h2, h3, h4, h5, h6 { .reset; }
     background-color: @bg1;
     text-align: center;
     text-transform: uppercase;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap; 
   }
   .subtitle {
     margin-top: 7px;
@@ -256,7 +259,10 @@ h1, h2, h3, h4, h5, h6 { .reset; }
     width: 100%;
     text-align: center;
     margin-bottom: 15px;
-    img { width: 80px; }
+    img { 
+      width: 100%;
+      max-width: 80px; 
+    }
   }
 
   .flex_list {
@@ -268,8 +274,9 @@ h1, h2, h3, h4, h5, h6 { .reset; }
     div[class*='grid'] { float: none; }
   }
   .flex_list--equiped {
+    .grid_3,
     .label{ background-color: #616161; }
-    div[class*='grid'] { background-color: @bg3; }
+    
   }
 }
 
