--- a/public/css/less/style.less
+++ b/public/css/less/style.less
@@ -282,6 +282,7 @@ h1, h2, h3, h4, h5, h6 { .reset; }
 
 .c-bottom_controlls {
   position: fixed;
+  z-index: 2000;
   bottom: 0px;
   width: 100%;
   -webkit-box-shadow: 0px 0px 24px 1px rgba(0,0,0,0.75);
