--- a/public/templates/dir_hero_sheet_ctrll.html
+++ b/public/templates/dir_hero_sheet_ctrll.html
@@ -211,6 +211,7 @@
               <div class="image"><img src="{{getItemImage(item)}}" alt=""></div>
               <div class="name">{{item.name}}</div>
               <div class="ctrl">
+                <div dir-Qty-Control="" class="btn-group" obj="item" prop="controllValue"></div>
                 <input type="number" placeholder="1" class="form-control" ng-model="item.controllValue"/>
                 <button type="button" class="btn btn-danger" ng-click="removeItem('spells', $index);">X</button>
               </div>
