--- a/public/css/less/style.less
+++ b/public/css/less/style.less
@@ -197,6 +197,10 @@ h1, h2, h3, h4, h5, h6 { .reset; }
       line-height: 20px;
       padding: 0;
       text-align: center !important;
+      .rounded(0px);
+    }
+    .form-control--big {
+      height: 30px;
     }
     input[type="checkbox"] {
       width: 100%;
@@ -278,6 +282,9 @@ h1, h2, h3, h4, h5, h6 { .reset; }
     .label{ background-color: #616161; }
     
   }
+}
+.c-hero_sheet--dead {
+  opacity: 0.5;
 }
 
 .c-bottom_controlls {
@@ -398,6 +405,9 @@ h1, h2, h3, h4, h5, h6 { .reset; }
   .btn {
     width: 38px;
   }
+}
+.c-layer--info {
+  .content { width: 300px; }
 }
 
 @import "_editor.less";
