--- a/public/templates/dir_item_info.html
+++ b/public/templates/dir_item_info.html
@@ -1,4 +1,4 @@
-﻿<div class="c-layer">
+﻿<div class="c-layer c-layer--info">
     <div class="bg"></div>
     <div class="content">
       <div class="item_img"><img src="{{item.image}}" /></div>
